tolk-tester/tests/invalid-semantics/err-4480.tolk
fun main() {
    Point2.create();
}

/**
@compilation_should_fail
@stderr unknown type name `Point2`
@stderr in function `main`
@stderr Point2.create()
 */
